bad/bin_op_eq_class_int.example_compiler_output
ERROR
[1mbad/bin_op_eq_class_int.lat:5:8: [1;31merror: [0;1moperator == cannot compare values of types `Y` and `int` because values are not convertible to either of the two types[m
	new Y == 42;
	      [1;32m^[m
